@@ -1,3 +1,12 @@
+2004-01-04  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/main.py:
+	Removed unnecessary sys pieces.
+
+	* src/legacy/icqt.py:
+	* src/config_example.py:
+	Added patches from Serge Trylis for proper encoding config.
+
 2004-01-02  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/config_example.py:
